terraform-k8s-istio-prometheus-stack/virtualservice-grafana.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "promgrafana.apatsev.org.ru"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: kube-prometheus-stack-grafana.prometheus
